Add multi-page setup

--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -93,7 +93,7 @@
                 <a class="nav-link btn btn-link" href="/blog">
                     <i aria-hidden="true" class="fa fa-user"></i> About me
                 </a>
-                <a class="nav-link btn btn-link" href="/blog">
+                <a class="nav-link btn btn-link" href="./works.html">
                     <i aria-hidden="true" class="fa fa-building"></i> Works
                 </a>
                 <a class="nav-link btn btn-link" href="/blog">
